[tool.poetry]
name = "fluorescence-visualization-dash"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dash = "^2.17.1"
pandas = "^2.2.2"
plotly = "^5.23.0"
dash-bootstrap-components = "^1.6.0"
dash-ag-grid = "^31.2.0"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
